--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 astroid==2.1.0
 autopep8==1.4.3
-Django==2.1.5
+dj-database-url==0.5.0
+Django==2.1.6
+django-heroku==0.3.1
 entrypoints==0.3
 flake8==3.7.4
+gunicorn==19.9.0
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
@@ -17,4 +20,5 @@ pylint-plugin-utils==0.4
 pytz==2018.9
 six==1.12.0
 typed-ast==1.3.0
+whitenoise==4.1.2
 wrapt==1.11.1
